src/documents/css/contrast.css.styl
build-themes-extensions(contrastThemes) {
    for themeName in contrastThemes {
        fColor = contrastThemes[themeName].foregroundColor;
        bColor = contrastThemes[themeName].backgroundColor;

        {themeName} {
            .fluid-web {
                .fluid-web-emphasized-text {
                    color: fColor !important;
                }
                .fluid-web-community-icon:before {
                    background-color: bColor !important;
                    box-shadow: none;
                }
                .fluid-web-showcase-item {
                    background: none !important;
                    border: 1px solid fColor;
                }
                a:hover,
                a:focus {
                    outline: 0.2rem solid fColor !important;
                }
                a:hover span:before,
                a:focus span:before {
                    text-shadow: none !important;
                }
                .fluid-web-project-description h3,
                .fluid-web-project-description p {
                    outline: none !important;
                }
            }
        }
    }
}
myThemes = {
    ".fl-theme-bw": {
        foregroundColor: #000000,
        backgroundColor: #ffffff
    }
    ".fl-theme-wb": {
        foregroundColor: #ffffff,
        backgroundColor: #000000
    }
    ".fl-theme-yb": {
        foregroundColor: #ffff00,
        backgroundColor: #000000
    }
    ".fl-theme-by": {
        foregroundColor: #000000,
        backgroundColor: #ffff00
    }
    ".fl-theme-lgdg": {
        foregroundColor: #bdbdbb,
        backgroundColor: #555555
    }
}
build-themes-extensions(myThemes);

.fl-font-times .fluid-web .fluid-web-emphasized-text {
    font-family: Georgia,Times,"Times New Roman",serif !important;
}
.fl-font-comic-sans .fluid-web .fluid-web-emphasized-text {
    font-family: "Comic Sans MS",sans-serif !important;
}
.fl-font-arial .fluid-web .fluid-web-emphasized-text {
    font-family: "Arial" !important;
}
.fl-font-verdana .fluid-web .fluid-web-emphasized-text {
    font-family: "Verdana" !important;
}

